--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,11 @@
 :root {
   --bar-height: 32px;
   --font-size: 12px;
+
+  --background-color: rgba(13, 9, 10, 0.25);
+  --text-color: rgba(234, 242, 239, 0.8);
+
+  --shadow: 0 0 8px rgba(12, 14, 13, 0.8);
 }
 
 * {
@@ -18,6 +23,7 @@ body {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	align-items: center;
 }
 
 html, body, .bar, .bar * {
@@ -28,26 +34,45 @@ html, body, .bar, .bar * {
 }
 
 .left, .center, .right {
-	color: white;
 	font-size: var(--font-size);
 	display: flex;
 	align-items: center;
 	width: fit-content;
+
+	box-shadow: var(--shadow);
+
+	margin-top: 10px;
+
+	background-color: var(--background-color);
+	color: var(--text-color);
+
+	gap: 4px;
+	
+	padding: 5px;
+	padding-top: 7px;
+
+	border-radius: 20px;
 }
 
 .left {
 	justify-content: left;
-	width: 33%;
+	margin-left: 8px;
+	padding-right: 10px;
 }
 
 .center {
 	justify-content: center;
-	width: 34%;
 }
 
 .right {
 	justify-content: right;
-	width: 33%;
+	margin-right: 8px;
+}
+
+.right > * {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .spacer {
@@ -104,7 +129,7 @@ html, body, .bar, .bar * {
 }
 
 .discharging {
-	top: 3px;
+	top: 4px;
 }
 
 .wifi {
@@ -126,19 +151,27 @@ html, body, .bar, .bar * {
 	font-size: var(--font-size);
 	position: relative;
 	top: -1px;
+
+	display: flex;
+	align-items: center;
+	gap: 2px;
+}
+
+.cpu a, .memory a, .disk a {
+	min-width: 3ch;
 }
 
 .diskIcon {
 	font-size: calc(var(--font-size) + 4px);
-	top: 3px;
+	top: 0px;
 }
 
 .cpuIcon {
 	font-size: calc(var(--font-size) + 4px);
-	top: 3px;
+	top: 0px;
 }
 
 .memoryIcon {
 	font-size: calc(var(--font-size) + 4px);
-	top: 3px;
+	top: 0px;
 }
